--- a/FiMa/ForgotPasswordTwo.xaml
+++ b/FiMa/ForgotPasswordTwo.xaml
@@ -1,17 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FiMa.ForgotPasswordOne"
-             Title="ForgotPassword"
-             NavigationPage.HasNavigationBar="False">
-
-
+             x:Class="FiMa.ForgotPasswordTwo"
+             Title="ForgotPasswordTwo">
     <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
 
         <Frame BorderColor="Transparent" BackgroundColor="Transparent" Margin="0,-170,0,50">
 
             <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
-                <Image Source="btn_login_one.png" HeightRequest="40" WidthRequest="40" Aspect="AspectFit"/>
+                <Image Source="btn_login_check.png" HeightRequest="40" WidthRequest="40" Aspect="AspectFit"/>
                 <BoxView WidthRequest="80" HeightRequest="1" Color="Black" Background="Transparent" Margin="5"/>
                 <Image Source="btn_login_two.png" HeightRequest="40" WidthRequest="40" Aspect="AspectFit"/>
                 <BoxView WidthRequest="80" HeightRequest="1" Color="Black" Background="Transparent" Margin="5"/>
@@ -22,11 +19,19 @@
 
         <Label Text=" " HeightRequest="50"/>
 
-        <Label Text="Informe o e-mail para qual deseja redefinir a senha" Margin="0,-40,0,0" MinimumHeightRequest="30"/>
+        <Label Text="Enviamos o código de verificação para o e-mail: {email}" Margin="0,-40,0,0" MinimumHeightRequest="40"/>
+        <Label Text="Insira o código que enviamos para você!" Margin="0,20,0,0" MinimumHeightRequest="40"/>
 
         <Label Text=" " HeightRequest="30"/>
-        <Label Text="E-mail" HeightRequest="30"/>
-        <Entry Placeholder="nome@exemplo.com" Keyboard="Email"/>
+        <Label Text="Código" HeightRequest="30"/>
+        <Entry Placeholder="123456" Keyboard="Numeric"/>
+
+        <Label Text="Não recebeu o código? 45s" Margin="0,5,0,0" MinimumHeightRequest="40" FontSize="12"/>
+        <Label Text="Reenviar código" TextDecorations="Underline" Margin="0,-20,0,0" FontSize="12">
+            <Label.GestureRecognizers>
+                <TapGestureRecognizer Tapped="OnClickForgotPass"/>
+            </Label.GestureRecognizers>
+        </Label>
 
         <Label Text=" " HeightRequest="30"/>
         <StackLayout Margin="0,40,0,0" >
@@ -38,5 +43,4 @@
         </StackLayout>
 
     </VerticalStackLayout>
-    
 </ContentPage>
