Adicionado o back-end
Está pendente a implementação da base de dados e do menu principal

--- a/FiMa/ForgotPasswordConcluido.xaml
+++ b/FiMa/ForgotPasswordConcluido.xaml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.ForgotPasswordConcluido"
-             Title="ForgotPasswordConcluido">
+             Title="ForgotPasswordConcluido"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout BackgroundColor="#1C1831">
+
         <Image Source="chiclete_guarana.png" HeightRequest="170" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,250,0,0" WidthRequest="170" Aspect="AspectFit"/>
 
         <Label Text="Faça login para gerenciar suas finanças" HeightRequest="30" VerticalOptions="Center" HorizontalOptions="Center" TextColor="White" Margin="0,130,0,0" FontSize="12"/>
