--- a/FiMa/ForgotPasswordOne.xaml
+++ b/FiMa/ForgotPasswordOne.xaml
@@ -26,7 +26,7 @@
 
         <Label Text=" " HeightRequest="30"/>
         <Label Text="E-mail" HeightRequest="30"/>
-        <Entry Placeholder="nome@exemplo.com" Keyboard="Email"/>
+        <Entry Placeholder="nome@exemplo.com" Keyboard="Email" x:Name="EtEmail"/>
 
         <Label Text=" " HeightRequest="30"/>
         <StackLayout Margin="0,40,0,0" >
