--- a/FiMa/ForgotPasswordTwo.xaml
+++ b/FiMa/ForgotPasswordTwo.xaml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.ForgotPasswordTwo"
-             Title="ForgotPasswordTwo">
-    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center">
+             Title="ForgotPasswordTwo"
+             NavigationPage.HasNavigationBar="False">
+
+    <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center" Margin="30">
 
         <Frame BorderColor="Transparent" BackgroundColor="Transparent" Margin="0,-170,0,50">
 
@@ -19,7 +21,7 @@
 
         <Label Text=" " HeightRequest="50"/>
 
-        <Label Text="Enviamos o código de verificação para o e-mail: {email}" Margin="0,-40,0,0" MinimumHeightRequest="40"/>
+        <Label Text="Enviamos o código de verificação para o e-mail: {email}" Margin="0,-40,0,0" MinimumHeightRequest="40" x:Name="LbEmail"/>
         <Label Text="Insira o código que enviamos para você!" Margin="0,20,0,0" MinimumHeightRequest="40"/>
 
         <Label Text=" " HeightRequest="30"/>
