--- a/FiMa/AdicionarReceita.xaml
+++ b/FiMa/AdicionarReceita.xaml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.AdicionarReceita"
-             Title="AdicionarReceita">
+             Title="Adicionar Receita">
     <VerticalStackLayout HorizontalOptions="Center" Margin="30">
         <Label 
         Text="Adicionar Receita"
@@ -24,5 +24,6 @@
         <Frame CornerRadius="5" BorderColor="Black" BackgroundColor="Transparent" Padding="1" Margin="0,15,0,0">
             <Button Text="Cancelar" TextColor="Black" BackgroundColor="#FFFFFF" x:Name="BtnCancelar" Clicked="BtnCancelar_Clicked"/>
         </Frame>
+
     </VerticalStackLayout>
 </ContentPage>
