--- a/FiMa/CreateAccountConcluido.xaml
+++ b/FiMa/CreateAccountConcluido.xaml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.CreateAccountConcluido"
-             Title="CreateAccountConcluido">
+             Title="CreateAccountConcluido"
+             NavigationPage.HasNavigationBar="False">
+
     <VerticalStackLayout BackgroundColor="#1C1831">
         <Image Source="conta_criada.png" HeightRequest="170" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,250,0,0" WidthRequest="170" Aspect="AspectFit"/>
 
