--- a/FiMa/ForgotPasswordTree.xaml
+++ b/FiMa/ForgotPasswordTree.xaml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.ForgotPasswordTree"
-             Title="ForgotPasswordTree">
+             Title="ForgotPasswordTree"
+             NavigationPage.HasNavigationBar="False">
     <VerticalStackLayout  HorizontalOptions="Center">
 
         <Frame BorderColor="Transparent" BackgroundColor="Transparent" VerticalOptions="Start" HorizontalOptions="Center" Margin="0,40,0,0">
@@ -20,16 +21,17 @@
         <Label Text="Tudo certo, agora redefina sua senha." VerticalOptions="Center" HorizontalOptions="Center" Margin="0,30,0,0" HeightRequest="30" FontSize="16"/>
 
         <Label Text="Crie sua senha" HeightRequest="30" Margin="0,40,0,0" FontSize="14"/>
-        <Entry x:Name="PasswordEntry" Placeholder="Insira sua senha" Keyboard="Text" IsPassword="true"/>
+        <Entry x:Name="EtSenha" Placeholder="Insira sua senha" Keyboard="Text" IsPassword="true" TextChanged="EtSenha_TextChanged"/>
 
         <Label Text="Sua senha deve conter:" HeightRequest="30" Margin="0,10,0,0" FontSize="12"/>
-        <Label Text="- No mínimo 8 caracteres" HeightRequest="30" Margin="0,-11,0,0" FontSize="12"/>
-        <Label Text="- Um número" HeightRequest="30" Margin="0,-11,0,0" FontSize="12"/>
-        <Label Text="- Uma letra maiúscula" HeightRequest="30" Margin="0,-11,0,0" FontSize="12"/>
-        <Label Text="- Uma letra minúscula" HeightRequest="30" Margin="0,-11,0,0" FontSize="12"/>
+        <Label Text="- No mínimo 8 caracteres e, no máximo 20" HeightRequest="30" Margin="0,-11,0,0" FontSize="12" x:Name="LbMinimoChar"/>
+        <Label Text="- Um número" HeightRequest="30" Margin="0,-11,0,0" FontSize="12" x:Name="LbMinimoNumero"/>
+        <Label Text="- Uma letra maiúscula" HeightRequest="30" Margin="0,-11,0,0" FontSize="12" x:Name="LbMinimoMaiusculo"/>
+        <Label Text="- Uma letra minúscula" HeightRequest="30" Margin="0,-11,0,0" FontSize="12" x:Name="LbMinimoMinusculo"/>
 
         <Label Text="Repita sua senha" HeightRequest="30" Margin="0,15,0,0" FontSize="14"/>
-        <Entry Placeholder="Insira sua senha" Keyboard="Text" IsPassword="true"/>
+        <Entry Placeholder="Insira sua senha" Keyboard="Text" IsPassword="true" x:Name="EtSenhaRepete" TextChanged="EtSenhaRepete_TextChanged"/>
+        <Label Text="- As senhas não coincidem" HeightRequest="30" Margin="0,0,0,0" FontSize="12" x:Name="LbCoincide"/>
 
         <Button Text="Concluir" BackgroundColor="#1C1831" x:Name="BtnConcluir" Clicked="BtnConcluir_Clicked" Margin="0,35,0,0"/>
     </VerticalStackLayout>
