--- a/FiMa/ImportarPDF.xaml
+++ b/FiMa/ImportarPDF.xaml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.ImportarPDF"
-             Title="ImportarPDF">
+             Title="Importar um PDF">
     <VerticalStackLayout HorizontalOptions="Center" Margin="30">
         <Label 
         Text="Importar PDF"
