--- a/FiMa/PaginaDespesaConcluido.xaml
+++ b/FiMa/PaginaDespesaConcluido.xaml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.PaginaDespesaConcluido"
-             Title="PaginaDespesaConcluido">
+             Title="PaginaDespesaConcluido"
+             NavigationPage.HasNavigationBar="False">
+
     <VerticalStackLayout HorizontalOptions="Center" Margin="30">
         <Label 
         Text="Adicionar Despesa"
