--- a/FiMa/ImportarPDF.xaml
+++ b/FiMa/ImportarPDF.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.ImportarPDF"
              Title="Importar um PDF">
+
     <VerticalStackLayout HorizontalOptions="Center" Margin="30">
         <Label 
         Text="Importar PDF"
@@ -14,7 +15,8 @@
         <Image Source="icone_pdf.png" HeightRequest="170" Margin="40" WidthRequest="170" Aspect="AspectFit"/>
         
         <Label Text="Escolha o PDF que deseja importar" HeightRequest="30"/>
-        <Entry Placeholder="R$ 0,00" Keyboard="Plain"/>
+        <!--<Entry Placeholder="Selecione o arquivo" Keyboard="Plain"/>-->
+        <Button Text="Procurar Arquivo" BackgroundColor="#1C1831" x:Name="BtnProcurar" Clicked="BtnProcurar_Clicked"/>
 
         <Label Text="Esse arquivo precisa de senha de acesso?" HeightRequest="30" Margin="0,10,0,0"/>
 
@@ -23,7 +25,7 @@
             <HorizontalStackLayout>
                 <StackLayout HorizontalOptions="Start">
                     <HorizontalStackLayout>
-                        <CheckBox x:Name="CBInvestir"/>
+                        <CheckBox x:Name="CBInvestir" CheckedChanged="CBInvestir_CheckedChanged" IsChecked="True"/>
                         <Label Text=" Sim" HorizontalOptions="Center" VerticalOptions="Center">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="OnClickSim"/>
@@ -34,7 +36,7 @@
 
                 <StackLayout>
                     <HorizontalStackLayout>
-                        <CheckBox x:Name="CBControlar"/>
+                        <CheckBox x:Name="CBControlar" CheckedChanged="CBControlar_CheckedChanged"/>
                         <Label Text="Não" HorizontalOptions="Center" VerticalOptions="Center">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="OnClickNao"/>
@@ -46,8 +48,8 @@
 
         </StackLayout>
 
-        <Label Text="Qual a senha de acesso do arquivo?" HeightRequest="30" Margin="0,20,0,0"/>
-        <Entry Placeholder="" Keyboard="Text" IsPassword="True"/>
+        <Label Text="Qual a senha de acesso do arquivo?" HeightRequest="30" Margin="0,20,0,0" x:Name="LbSenha"/>
+        <Entry Placeholder="" Keyboard="Text" IsPassword="True" x:Name="EtSenha"/>
 
         <Button Text="Importar PDF" BackgroundColor="#1C1831" x:Name="BtnEntrar" Clicked="BtnEntrar_Clicked" Margin="0,20,0,0"/>
 
