--- a/FiMa/MainPage.xaml
+++ b/FiMa/MainPage.xaml
@@ -2,7 +2,7 @@
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.MainPage"
-             Title="MainPage"
+             Title="Voltar"
              NavigationPage.HasNavigationBar="False">
 
     <ContentPage IconImageSource="icone_home.png">
