--- a/FiMa/CreateAccountTwo.xaml
+++ b/FiMa/CreateAccountTwo.xaml
@@ -85,7 +85,7 @@
                 </StackLayout>
                 <Label Text=" " WidthRequest="30"/>
                 <StackLayout WidthRequest="150">
-                    <Label Text="Despesa Mensal" HeightRequest="30"/>
+                    <Label Text="Despesas Fixas" HeightRequest="30"/>
                     <Entry Placeholder="R$ 0.000,00" Keyboard="Numeric" x:Name="EtDespesa" Text="0"/>
 
                 </StackLayout>
