--- a/FiMa/PaginaDespesas.xaml
+++ b/FiMa/PaginaDespesas.xaml
@@ -17,7 +17,7 @@
         <Entry Placeholder="R$ 0,00" Keyboard="Numeric"/>
 
         <Label Text="Adicione uma descrição para esta despesa" HeightRequest="30" Margin="0,20,0,0"/>
-        <Entry Placeholder="" Keyboard="Text"/>
+        <Entry Placeholder="" Keyboard="Text" x:Name="EtDesc"/>
 
         <Button Text="Adicionar" BackgroundColor="#1C1831" x:Name="BtnEntrar" Clicked="BtnConfirmar_Clicked" Margin="0,20,0,0"/>
 
