--- a/FiMa/PaginaDespesas.xaml
+++ b/FiMa/PaginaDespesas.xaml
@@ -7,21 +7,34 @@
         <Label 
             Text="Adicionar Despesa"
             VerticalOptions="Center" 
-            FontSize="20"
+            FontSize="18"
             FontAttributes="Bold"
             HorizontalOptions="Center" />
 
-        <Image Source="adicionar_despesa.png" HeightRequest="170" Margin="60" WidthRequest="170" Aspect="AspectFit"/>
+        <Image Source="adicionar_despesa.png" HeightRequest="85" Margin="15" WidthRequest="85" Aspect="AspectFit"/>
 
         <Label Text="Qual valor a ser adicionado?" HeightRequest="30"/>
         <Entry Placeholder="R$ 0,00" Keyboard="Numeric"/>
 
-        <Label Text="Adicione uma descrição para esta despesa" HeightRequest="30" Margin="0,20,0,0"/>
+        <Label Text="Adicione uma descrição para esta despesa" HeightRequest="36" Margin="0,15,0,0"/>
         <Entry Placeholder="" Keyboard="Text" x:Name="EtDesc"/>
+
+        <Label Text="Qual a categoria da despesa?" HeightRequest="33" Margin="0,15,0,0"/>
+        <Picker Title="Selecione a categoria" x:Name="PcGenero">
+          
+        </Picker>
+
+        <Label Text="Quando ocorreu essa despesa?" HeightRequest="30" Margin="0,15,0,0"/>
+        <DatePicker x:Name="DpNascimento"/>
+
+        <Label Text="Qual a forma de pagamento?" HeightRequest="33" Margin="0,15,0,0"/>
+        <Picker Title="Selecione a forma de pagamento">
+
+        </Picker>
 
         <Button Text="Adicionar" BackgroundColor="#1C1831" x:Name="BtnEntrar" Clicked="BtnConfirmar_Clicked" Margin="0,20,0,0"/>
 
-        <Frame CornerRadius="5" BorderColor="Black" BackgroundColor="Transparent" Padding="1" Margin="0,15,0,0">
+        <Frame CornerRadius="5" BorderColor="Black" BackgroundColor="Transparent" Padding="1" Margin="0,10,0,0">
             <Button Text="Cancelar" TextColor="Black" BackgroundColor="#FFFFFF" x:Name="BtnVoltar" Clicked="BtnVoltar_Clicked"/>
         </Frame>
     </VerticalStackLayout>
