--- a/FiMa/MainPage.xaml
+++ b/FiMa/MainPage.xaml
@@ -230,9 +230,150 @@
 
                             <HorizontalStackLayout>
 
+                                <Image Source="carteira.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
+                                <Label Text="Salário" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ +2200,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
+
+
+                            </HorizontalStackLayout>
+
+                        </Frame>
+
+                        <Frame BackgroundColor="White" CornerRadius="18"  WidthRequest="340" HeightRequest="60" Margin="-10,15,0,0">
+
+                            <HorizontalStackLayout>
+
+                                <Image Source="carteira.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
+                                <Label Text="Tênis vendido" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ +1500,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
+
+
+                            </HorizontalStackLayout>
+
+                        </Frame>
+
+                        <Frame BackgroundColor="White" CornerRadius="18"  WidthRequest="340" HeightRequest="60" Margin="-10,15,0,0">
+
+                            <HorizontalStackLayout>
+
+                                <Image Source="carteira.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
+                                <Label Text="Frela tela do projeto" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ +200,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
+
+
+                            </HorizontalStackLayout>
+
+                        </Frame>
+
+                    </VerticalStackLayout>
+
+                </StackLayout>
+
+                <VerticalStackLayout>
+                    <Label 
+        Text="Pagina 2"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
+                    <Button Text="Telas de despesas" BackgroundColor="#BE935C" x:Name="BtnDespesas" Clicked="BtnDespesas_Clicked"/>
+                </VerticalStackLayout>
+
+            </VerticalStackLayout>
+        </ScrollView>
+    </ContentPage>
+
+    <ContentPage IconImageSource="botao_mais.png">
+        <VerticalStackLayout>
+            <Label 
+                Text="Pagina 3"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center" />
+            <Button Text="Telas de PDF" BackgroundColor="#BE935C" x:Name="BtnPDF" Clicked="BtnPDF_Clicked"/>
+        </VerticalStackLayout>
+
+    </ContentPage>
+
+    <ContentPage IconImageSource="despesas_icone.png" Title="Despesas">
+        <ScrollView>
+
+            <VerticalStackLayout>
+
+                <StackLayout BackgroundColor="White">
+
+                    <!-- Letrinhas no topo -->
+                    <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="Center" >
+                        <Label Text="JAN" Margin="0,0,15,0" FontSize="Medium" TextColor="#BE935C">
+
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                            </Label.GestureRecognizers>
+
+                        </Label>
+
+                        <Label Text="FEV" Margin="15,0,15,0" FontSize="Large" FontAttributes="Bold" TextColor="#BE935C">
+
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                            </Label.GestureRecognizers>
+
+                        </Label>
+
+                        <Label Text="MAR" Margin="15,0,0,0" FontSize="Medium" TextColor="#BE935C">
+
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                            </Label.GestureRecognizers>
+
+                        </Label>
+                    </HorizontalStackLayout>
+
+                    <!-- Olhinho -->
+                    <Image Source="olho_aberto.png"  VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="40" HeightRequest="40" Margin="15,10,0,0"  Aspect="AspectFit"/>
+
+                    <!-- Cifra -->
+                    <Label Text="R$ 100.000,00" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,20,0,0" FontSize="30" FontAttributes="Bold"/>
+
+                    <!-- Receita e Despesas -->
+                    <StackLayout Margin="0,20,0,0">
+                        <HorizontalStackLayout HorizontalOptions="Center" VerticalOptions="Center">
+                            <Grid>
+                                <!-- O círculo é desenhado dentro do Grid -->
+                                <Ellipse WidthRequest="200" HeightRequest="200" Fill="Blue" />
+                            </Grid>
+                        </HorizontalStackLayout>
+
+                    </StackLayout>
+
+                    <Label Text=" " WidthRequest="20"/>
+
+                </StackLayout>
+
+                <StackLayout BackgroundColor="#E8DCC4" HeightRequest="500">
+
+                    <VerticalStackLayout>
+
+                        <Label Text="Extrato" TextColor="Black" FontAttributes="Bold" FontSize="Medium" Margin="25,25,0,0"/>
+
+                    </VerticalStackLayout>
+
+                    <HorizontalStackLayout>
+
+                        <Label Text="R$ 300,00" TextColor="Black" FontSize="Medium" Margin="25,25,0,0"/>
+                        <Label Text="R$ 300,00" TextColor="Black" FontSize="Small" Margin="180,28,0,0"/>
+
+                    </HorizontalStackLayout>
+
+                    <VerticalStackLayout>
+
+                        <Frame BackgroundColor="Green" CornerRadius="60" WidthRequest="340" HeightRequest="0" Margin="-8,5,0,0"/>
+                        <Label Text="Meta de renda" TextColor="Black" FontSize="13" Margin="25,4,0,0"/>
+
+                        <Frame BackgroundColor="White" CornerRadius="18"  WidthRequest="340" HeightRequest="60" Margin="-10,15,0,0">
+
+                            <HorizontalStackLayout>
+
                                 <Image Source="comida.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
-                                <Label Text="Outback - eldorado" TextColor="Black" FontSize="15" Margin="15,-1,0,0"/>
-                                <Label Text="R$ -200,00" TextColor="Black" FontSize="15" Margin="42,-1,0,0"/>
+                                <Label Text="Outback - eldorado" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ -200,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
 
 
                             </HorizontalStackLayout>
@@ -244,8 +385,8 @@
                             <HorizontalStackLayout>
 
                                 <Image Source="comida.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
-                                <Label Text="Outback - eldorado" TextColor="Black" FontSize="15" Margin="15,-1,0,0"/>
-                                <Label Text="R$ -200,00" TextColor="Black" FontSize="15" Margin="42,-1,0,0"/>
+                                <Label Text="Outback - eldorado" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ -200,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
 
 
                             </HorizontalStackLayout>
@@ -257,8 +398,8 @@
                             <HorizontalStackLayout>
 
                                 <Image Source="comida.png" WidthRequest="30" HeightRequest="30" Margin="5,10,0,10" Aspect="AspectFill"/>
-                                <Label Text="Outback - eldorado" TextColor="Black" FontSize="15" Margin="15,-1,0,0"/>
-                                <Label Text="R$ -200,00" TextColor="Black" FontSize="15" Margin="42,-1,0,0"/>
+                                <Label Text="Outback - eldorado" TextColor="Black" MinimumWidthRequest="160" FontSize="15" Margin="15,-1,0,0"/>
+                                <Label Text="R$ 200,00" TextColor="Black" FontSize="15" Margin="0,-1,0,0"/>
 
 
                             </HorizontalStackLayout>
@@ -279,28 +420,6 @@
 
             </VerticalStackLayout>
         </ScrollView>
-    </ContentPage>
-
-    <ContentPage IconImageSource="botao_mais">
-        <VerticalStackLayout>
-            <Label 
-                Text="Pagina 3"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-            <Button Text="Telas de PDF" BackgroundColor="#BE935C" x:Name="BtnPDF" Clicked="BtnPDF_Clicked"/>
-            <Button Text="Telas de despesas" BackgroundColor="#BE935C" x:Name="BtnDespesas" Clicked="BtnDespesas_Clicked"/>
-        </VerticalStackLayout>
-
-    </ContentPage>
-
-    <ContentPage IconImageSource="despesas_icone.png" Title="Despesas">
-        <VerticalStackLayout>
-            <Label 
-                Text="Pagina 4"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-        </VerticalStackLayout>
-
     </ContentPage>
 
     <ContentPage IconImageSource="configuracoes_icone.png" Title="Configurações">
