--- a/FiMa/ImportarPDF.xaml
+++ b/FiMa/ImportarPDF.xaml
@@ -18,9 +18,9 @@
         <!--<Entry Placeholder="Selecione o arquivo" Keyboard="Plain"/>-->
         <Button Text="Procurar Arquivo" BackgroundColor="#1C1831" x:Name="BtnProcurar" Clicked="BtnProcurar_Clicked"/>
 
-        <Label Text="Esse arquivo precisa de senha de acesso?" HeightRequest="30" Margin="0,10,0,0"/>
+        <!--<Label Text="Esse arquivo precisa de senha de acesso?" HeightRequest="30" Margin="0,10,0,0"/>-->
 
-        <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+        <!--<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
             <HorizontalStackLayout>
                 <StackLayout HorizontalOptions="Start">
@@ -44,6 +44,17 @@
                         </Label>
                     </HorizontalStackLayout>
                 </StackLayout>
+            </HorizontalStackLayout>
+
+        </StackLayout>-->
+
+        <StackLayout Margin="0,10,0,0">
+
+            <HorizontalStackLayout>
+
+                <CheckBox x:Name="CbSenha" CheckedChanged="CbSenha_CheckedChanged" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Label Text=" O arquivo possui senha?" HorizontalOptions="Center" VerticalOptions="Center"/>
+
             </HorizontalStackLayout>
 
         </StackLayout>
