--- a/FiMa/AdicionarReceita.xaml
+++ b/FiMa/AdicionarReceita.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FiMa.AdicionarReceita"
-             Title="Adicionar Receita">
+             Title="">
+
     <VerticalStackLayout HorizontalOptions="Center" Margin="30">
         <Label 
         Text="Adicionar Receita"
@@ -14,15 +15,15 @@
         <Image Source="adicionar_receita.png" HeightRequest="85" Margin="25" WidthRequest="85" Aspect="AspectFit"/>
 
         <Label Text="Qual valor a ser adicionado?" HeightRequest="30"/>
-        <Entry Placeholder="R$ 0,00" Keyboard="Numeric"/>
+        <Entry Placeholder="R$ 0,00" Keyboard="Numeric" x:Name="EtReceita" TextChanged="EtReceita_TextChanged"/>
 
         <Label Text="Adicione uma descrição para esta receita" HeightRequest="29" Margin="0,20,0,0"/>
         <Entry Placeholder="" Keyboard="Text" x:Name="EtDesc"/>
 
-        <Label Text="Qual a categoria da receita?" HeightRequest="33" Margin="0,20,0,0"/>
+        <!--<Label Text="Qual a categoria da receita?" HeightRequest="33" Margin="0,20,0,0"/>
         <Picker Title="Selecione a categoria" x:Name="PcGenero">
 
-        </Picker>
+        </Picker>-->
 
         <Label Text="Quando ocorreu essa receita?" HeightRequest="30" Margin="0,20,0,0"/>
         <DatePicker x:Name="DpNascimento"/>
@@ -32,5 +33,6 @@
         <Frame CornerRadius="5" BorderColor="Black" BackgroundColor="Transparent" Padding="1" Margin="0,15,0,0">
             <Button Text="Cancelar" TextColor="Black" BackgroundColor="#FFFFFF" x:Name="BtnVoltar" Clicked="BtnCancelar_Clicked"/>
         </Frame>
+
     </VerticalStackLayout>
 </ContentPage>
